# hyper_engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build_windows.bat
.github/workflows/: cmake.yml
cmake/: shaders.cmake
hyper/: CMakeLists.txt
hyper/assets/: settings.json
hyper/include/: hyper.h
hyper/src/: hppch.cpp  hppch.h
hyper/src/base/: Application.cpp  Application.h  Config  Entrypoint.h  Log.cpp  Log.h  Parser.cpp  Parser.h  Settings.cpp  Settings.h  application.cpp  application.h  asserts.h  base.h  config.h  entrypoint.h  log.cpp  log.h  parser.cpp  parser.h  settings.cpp  settings.h  window.cpp  window.h
hyper/src/core/: application.cpp  application.h  asserts.h  base.h  entrypoint.h  input.h  key_codes.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  parser.cpp  parser.h  settings.cpp  settings.h  window.cpp  window.h
hyper/src/events/: Event_Old.h  application_event_args.h  event.h  event_old.h  key_event_args.h  mouse_event_args.h
hyper/src/hyper/core/: application.cpp  application.h  arena_allocator.h  arena_allocator.inl  asserts.h  base.h  concepts.h  config.h  entrypoint.h  extensions.h  input.h  key_codes.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  mouse_codes.h  parser.cpp  parser.h  result.h  settings.cpp  settings.h  timer.h  types.h  window.cpp  window.h
hyper/src/hyper/events/: application_event_args.h  event.h  key_event_args.h  mouse_event_args.h
hyper/src/hyper/renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  buffer.cpp  buffer.h  camera.h  editor_camera.cpp  editor_camera.h  framebuffer.cpp  framebuffer.h  graphics_context.cpp  graphics_context.h  orthographic_camera.cpp  orthographic_camera.h  (+18 more)
hyper/src/platform/: universal_window.cpp  universal_window.h
hyper/src/platform/opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_framebuffer.cpp  opengl_framebuffer.h  opengl_graphics_context.cpp  opengl_graphics_context.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_vertex_array.cpp  opengl_vertex_array.h
hyper/src/platform/sfml/: sfml_window.cpp  sfml_window.h
hyper/src/platform/universal/: glfw_input.cpp  universal_input.cpp  universal_window.cpp  universal_window.h
hyper/src/platform/vulkan/: system_info.cpp  system_info.h  vk_device.cpp  vk_device.h  vk_instance.cpp  vk_instance.h  vk_surface.cpp  vk_surface.h  vk_swapchain.cpp  vk_swapchain.h  vk_vertex.cpp  vk_vertex.h  vulkan_errors.h  vulkan_graphics_context.cpp  vulkan_graphics_context.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_instance_builder.cpp  vulkan_instance_builder.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer_api.cpp  vulkan_renderer_api.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_window.cpp  vulkan_window.h
hyper/src/renderer/: graphics_context.h
playground/assets/scenes/: 3DExample.hazel  Example.hazel  Physics2D.hazel  PinkCube.hazel
playground/assets/shaders/: FlatColor.glsl  Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl  Texture.glsl
playground/src/: playground_application.cpp  playground_application.h  playground_layer.cpp  playground_layer.h
